--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
 Django==1.9.5
 PyJWT==1.4.0
+dj-database-url==0.4.1
+django-bootstrap-form==3.2
+gunicorn==19.4.5
 oauthlib==1.0.3
+psycopg2==2.6.1
 python-openid==2.2.5
 python-social-auth==0.2.18
 requests==2.9.1
 requests-oauthlib==0.6.1
 six==1.10.0
+whitenoise==3.0
 wsgiref==0.1.2
